2008-11-17  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Added new Log.cs file.

2008-11-14  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Uses new options.make

2008-11-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add MethodPrinter to the build. Patch by	Jesse Jones

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Test to SUBDIRS to fix make checkdist

2008-11-08  Alan McGovern  <alan.mcgovern@gmail.com>

	* Makefile.am:
	* Gendarme.Framework.csproj: Enable Makefile integration of
	Gendarme.Framework.csproj

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Gendarme.Framework.csproj: Activate makefile integration for all the
	rules projects. Remove the old mdp files as they are no longer
	needed.

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Regenerate documentation if the .doc file has changed
	* ChangeLog: Remove duplicate entry (from another dir)

2008-10-30  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Added FRAMEWORK_OPTIONS and TESTS_OPTIONS. These define
	DEBUG/TRACE, enable all warnings, make warnings errors. (small changes
	by Sebastien Pouliot for things we'll enable only later)

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Add PrimitiveReferences helpers to the MD project

2008-10-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Generate the documentation when we compile the framework
	and put it available for distribute, using the same way we are using for
	the rules documentation.

2008-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add NamespaceEngine and Namespace MD project file.

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add NamespaceEngine and Namespace helper to the build.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add PrimitiveReferences to the build.

2008-09-06  Sebastien Pouliot  <sebastien@ximian.com>
